@@ -1,3 +1,9 @@
+Thu Jan  7 22:32:21 2016  Kenta Murata  <mrkn@mrkn.jp>
+
+	* ruby.h: undef HAVE_BUILTIN___BUILTIN_CHOOSE_EXPR_CONSTANT_P
+	  and HAVE_BUILTIN___BUILTIN_TYPES_COMPATIBLE_P on C++.
+	  [ruby-core:72736] [Bug #11962]
+
 Thu Jan  7 22:02:21 2016  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* enum.c (enum_minmax): optimize object comparison in
